<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="TcoSmartFunctionKitResponseHw_v_4_x_x" Id="{1f0e10c9-06bc-04a7-382d-3b4c8a9fadc1}">
    <Declaration><![CDATA[TYPE
    TcoSmartFunctionKitResponseHw_v_4_x_x :
    STRUCT
        Handle AT %I* : WORD;
        Status AT %I* : WORD;
        Value1 AT %I* : DWORD;
        Value2 AT %I* : DWORD;
        Value3 AT %I* : DWORD;
        NotificationId AT %I* : WORD;
		NotificationValue AT %I* : DWORD;
        NotificationStatus AT %I* : WORD;
        NotificationPosition AT %I* : DWORD;
        NotificationVelocity AT %I* : DWORD;
        NotificationForce AT %I* : DWORD;
        DigitalIoMapping AT %I* : WORD;
        VirtualIo AT %I* : WORD;

    END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>